# document-digitisation

./: .gitignore  README.md  form.html  generate_test_form.py  output.json  paperwork_storyboard_final.xlsx  paperwork_storyboard_prompt.md  pyproject.toml  render.js
document_digitisation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: graph.py  main.py  models.py  state.py  utils.py
src/nodes/: analyze_field.py  extract_fields.py  extract_text.py  finalize.py  group_fields.py
